--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -12,6 +12,10 @@
     />
     <meta name="description" content="" />
     <link rel="stylesheet" href="./assets/style.css" />
+    <script
+      src="https://kit.fontawesome.com/704403949e.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <header>
@@ -76,6 +80,6 @@
       </nav>
     </footer>
 
-    <script src="index.js"></script>
+    <script src="js/index.js"></script>
   </body>
 </html>
