--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -12,6 +12,7 @@
     />
     <meta name="description" content="" />
     <link rel="stylesheet" href="./assets/style.css" />
+    <link rel="stylesheet" href="./assets/admin.css" />
     <script
       src="https://kit.fontawesome.com/704403949e.js"
       crossorigin="anonymous"
@@ -24,7 +25,7 @@
         <ul>
           <li>projets</li>
           <li>contact</li>
-          <li>login</li>
+          <li id="login-nav">login</li>
           <li><img src="./assets/icons/instagram.png" alt="Instagram" /></li>
         </ul>
       </nav>
@@ -80,6 +81,6 @@
       </nav>
     </footer>
 
-    <script src="js/index.js"></script>
+    <script src="js/index.js" type="module"></script>
   </body>
 </html>
