form error management

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -54,11 +54,11 @@
               <label for="edit-title">Titre</label>
               <input type="text" name="edit-title" id="edit-title" />
               <label for="edit-category">Catégorie</label>
-              <select name="select-category" id="select-category" required>
+              <select name="select-category" id="select-category">
                 <option value="" selected></option>
               </select>
             </div>
-            <button type="submit" id="submit-btn" class="invalid-form" disabled>
+            <button type="submit" id="submit-btn" class="invalid-form">
               Valider
             </button>
           </form>
