restructuration modules js

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -45,6 +45,7 @@
                   accept="image/*"
                   id="img-upload"
                   class="img-input"
+                  name="edit-img"
                 />
                 <span>jpg, png : 4mo max</span>
               </div>
