--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -48,6 +48,6 @@
       </nav>
     </footer>
 
-    <script src="js/login.js"></script>
+    <script src="js/login.js" type="module"></script>
   </body>
 </html>
