optimization galleries updates

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -47,7 +47,7 @@
                   class="img-input"
                   name="edit-img"
                 />
-                <span>jpg, png : 4mo max</span>
+                <p>jpg, png : 4mo max</p>
               </div>
             </div>
 
