--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -31,9 +31,9 @@
         <h2>Log In</h2>
         <form id="login-form">
           <label for="email">E-mail</label>
-          <input type="email" name="email" id="email" required />
+          <input type="email" name="email" id="email" />
           <label for="password">Mot de passe</label>
-          <input type="password" name="password" id="password" required />
+          <input type="password" name="password" id="password" />
           <input type="submit" value="Se connecter" />
         </form>
         <a href="#">Mot de passe oublié</a>
