optimization of error handling

--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -21,7 +21,7 @@
         <ul>
           <li>projets</li>
           <li>contact</li>
-          <li class="active-nav">login</li>
+          <li id="login-nav" class="active-nav">login</li>
           <li><img src="./assets/icons/instagram.png" alt="Instagram" /></li>
         </ul>
       </nav>
