--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -28,7 +28,9 @@
         <section class="modal-content first-modal">
           <h3 id="modal-title-gallery" class="modal-title">Galerie photo</h3>
           <div class="modal-gallery"></div>
-          <button class="next-modal-button">Ajouter une photo</button>
+          <button class="next-modal-button valid-button">
+            Ajouter une photo
+          </button>
         </section>
         <section class="modal-content second-modal hidden">
           <h3 id="modal-title-add" class="modal-title">Ajout photo</h3>
@@ -59,7 +61,11 @@
                 <option value="" selected></option>
               </select>
             </div>
-            <button type="submit" id="submit-btn" class="invalid-form">
+            <button
+              type="submit"
+              id="submit-btn"
+              class="valid-button invalid-form"
+            >
               Valider
             </button>
           </form>
