--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -22,8 +22,10 @@
     <aside id="edit-modal" class="modal" aria-hidden="true" role="dialog">
       <div class="modal-container">
         <div class="action-icons">
-          <i class="fa-solid fa-arrow-left back-modal"></i>
-          <i class="fa-solid fa-xmark close-modal"></i>
+          <button class="back-modal">
+            <i class="fa-solid fa-arrow-left"></i>
+          </button>
+          <button class="close-modal"><i class="fa-solid fa-xmark"></i></button>
         </div>
         <section class="modal-content first-modal">
           <h3 id="modal-title-gallery" class="modal-title">Galerie photo</h3>
