--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -59,7 +59,7 @@
               <label for="edit-title">Titre</label>
               <input type="text" name="edit-title" id="edit-title" />
               <label for="edit-category">Catégorie</label>
-              <select name="select-category" id="select-category">
+              <select name="edit-category" id="edit-category">
                 <option value="" selected></option>
               </select>
             </div>
